Updating changes file with new patches on 1.4.1 branch
git-svn-id: https://svn.apache.org/repos/asf/incubator/sqoop/branches/branch-1.4.1@1240667 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,10 @@ Release 1.4.1 - 02/01/2012
 
     SQOOP-409 hive-drop-import-delims doesn't work with MySQL direct import
 
+    SQOOP-428 AvroOutputFormat doesn't support compression even though documentation claims it does
+
+    SQOOP-433 Tests are failing on current 0.23 version
+
   IMPROVEMENTS
 
     SQOOP-432 Enforce writing space after if statement
